Make collection syncronized